@@ -7,6 +7,7 @@ In progress...
 + Research projects can now spawn new projects when they are finished
 * Refactored world generation, split into multiple classes
 + Added universal json resource manager for loading game entity descriptions.
++ Added content - some new researches, reports and artifacts
 
 ======================================================
 VERSION 0.0.2
